--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
                 <div>
                     <div class="stats shadow">
                         <div class="stat">
-                          <div class="stat-value">89,400</div>
+                          <div id="account-balance" class="stat-value">9400</div>
                           <div class="stat-desc">Available Balance</div>
                         </div>
                     </div>
@@ -29,12 +29,12 @@
                 <div class="divider"></div>
                 <!-- user action button -->
                 <div>
-                    <button class="btn btn-lg">Add Money</button>
-                    <button class="btn btn-lg">Cash Out</button>
+                    <button id="btn-show-add-money" class="btn btn-lg">Add Money</button>
+                    <button id="btn-show-cash-out" class="btn btn-lg">Cash Out</button>
                 </div>
                 <div class="divider"></div>
                 <!-- add money form start -->
-                <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                <div id="add-money-form" class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                     <form class="card-body">
                       <div class="form-control">
                         <label class="label">
@@ -54,10 +54,34 @@
                     </form>
                 </div>
                 <!-- add money form end -->
+
+                <!-- cash out start -->
+                  <div id="cash-out-form" class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                    <form class="card-body">
+                      <div class="form-control">
+                        <label class="label">
+                          <span class="label-text">Amount</span>
+                        </label>
+                        <input id="input-cash-out" type="text" placeholder="Withdraw Amount" class="input input-bordered" required />
+                      </div>
+                      <div class="form-control">
+                        <label class="label">
+                          <span class="label-text">Pin Number</span>
+                        </label>
+                        <input id="input-cash-out-pin" type="password" placeholder="Enter 4 digit PIN number" class="input input-bordered" autocomplete="off" required />
+                      </div>
+                      <div class="form-control mt-6">
+                        <button id="btn-cash-out" class="btn btn-primary">Cash Out</button>
+                      </div>
+                    </form>
+                 </div>
+                <!-- cash out end -->
               </div>
             </div>
         </div>
     </main>
     <script src="./JS/home.js"></script>
+    <script src="./JS/cashOut.js"></script>
+    <script src="./JS/features.js"></script>
   </body>
 </html>
